--- a/Notebooks/Practica_Num_Py.ipynb
+++ b/Notebooks/Practica_Num_Py.ipynb
@@ -751,7 +751,7 @@
    "source": [
     "¿Consideras que el modelo es bueno para predecir dígitos escritos a mano?, ¿crees que hay margen de mejora?\n",
     "\n",
-    "En mi opinión algunas veces ni siquiera los humanos somos capaces de entender los garabatos de otras personas, por lo que encuentro este modelo bastante útil para predecir dígitos considerando que fue entrenado con 20,000 ejemplos, y utilizando distancia euclideana.\n",
+    "En mi opinión, algunas veces, ni siquiera los humanos somos capaces de entender los garabatos de otras personas, por lo que encuentro este modelo bastante útil para predecir dígitos, considerando que fue entrenado con 20,000 ejemplos, y utilizando distancia euclideana. \n",
     "Sí puede haber un margen de mejora quizá utilizando un data set más amplio o cambiando el algoritmo de aprendizaje.\n"
    ]
   },
