Pandas 100% and csv files

--- a/Notebooks/Practica_Num_Py.ipynb
+++ b/Notebooks/Practica_Num_Py.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +60,14 @@
     "    if x.ndim == 1:\n",
     "        n = x.size\n",
     "        m = 1\n",
-    "        x = x[None]  # Promote to a 2 dimensional array\n",
+    "        #x = x[None]  # Promote to a 2 dimensional array\n",
     "    else:\n",
     "        raise IndexError('Input x should be 1 dimensional.')\n",
     "\n",
     "    example_width = example_width or int(np.round(np.sqrt(n)))\n",
     "    example_height = n // example_width\n",
     "\n",
-    "    plt.imshow(x[0].reshape(example_height, example_width),\n",
+    "    plt.imshow(x.reshape(example_height, example_width),\n",
     "                        cmap='Greys', extent=[0, 1, 0, 1])\n",
     "    plt.show()"
    ]
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -98,13 +98,13 @@
        "       [5., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MNist = np.loadtxt(\"sample_data/mnist_train_small.csv\", delimiter=',')\n",
+    "MNist = np.loadtxt(\"mnist_train_small.csv\", delimiter=',')\n",
     "MNist"
    ]
   },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,26 +162,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-4d4c96976b9c>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-4d4c96976b9c>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Comprueba ejecutando la siguiente celda:\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "Comprueba ejecutando la siguiente celda:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -314,6 +303,7 @@
     "\n",
     "  for i in range(classes):\n",
     "    means[i,:] = np.mean(X[y==ulabels[i]], axis=0)\n",
+    "    # means[i, :] = X[y == ulabels[i]].mean(axis=0)\n",
     "\n",
     "  return means"
    ]
