--- a/Exercises/EDA_Pokemon_Ejercicio.ipynb
+++ b/Exercises/EDA_Pokemon_Ejercicio.ipynb
@@ -29,6 +29,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "XzoAktBBoXuZ"
+      },
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1NL_A70OG18qEkW_JtbMaTXf_GcQfURXu#scrollTo=XzoAktBBoXuZ)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "aPqLfztIKFmO"
       },
       "source": [
